# mina

./: Cargo.toml  README.md
src/: main.rs
tests/fixtures/: data.csv
